Add footer and theme switcher to navbar and base layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,9 @@ main {
 .search {
   margin-top: var(--row-gap-xsmall);
 }
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
