--- a/src/_includes/css/navbar.css
+++ b/src/_includes/css/navbar.css
@@ -31,3 +31,55 @@
 .navbar-home {
   text-decoration: none;
 }
+
+.footer-container {
+  background: var(--color-highlight);
+  margin-top: auto;
+}
+
+.footer {
+  --text-caption: 15px/1.6 var(--font-ui);
+  --margin: max(25px,5vw);
+  font: var(--text-caption);
+  color: var(--color-dim);
+  /* max-width: var(--max-width); */
+  margin: auto;
+  text-align: center;
+  padding: 0 var(--margin);
+}
+.footer-copyright {
+  margin: 0;
+  padding: 5px 0;
+
+  & a {
+    color: currentColor;
+  }
+}
+.button-theme {
+  background: none;
+  color: currentColor;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: solid 1px var(--text-caption);
+  padding: 0 .4em;
+  font: var(--text-callout);
+  border-radius: 5px;
+  cursor: pointer;
+  vertical-align: middle;
+
+  &:hover {
+    background: var(--color-background);
+  }
+}
+
+[data-theme="light"] .button-theme .is-light,
+[data-theme="dark"] .button-theme .is-dark {
+  display: block;
+}
+
+[data-theme="light"] .button-theme .is-dark,
+[data-theme="dark"] .button-theme .is-light {
+  display: none;
+}
